src/cfn/ad-infra.yaml


AWSTemplateFormatVersion: '2010-09-09'
Description: Infra Role
Parameters:
  SourceCidrForRDP:
    Description: IP Cidr 
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: "^([0-9]+\\.){3}[0-9]+\\/[0-9]+$"
  ADServerRole:
    Type: String
    Description: Role Name
Mappings: 
  RegionMap: 
    "us-east-1":
      NAME: Dev
      VPC: vpc-0b3165654d20eb6f3
      PRIVATESUBNET1: subnet-086396cc6e283e6cd
      PRIVATESUBNET2: subnet-07012176d3b948507
      PUBLICSUBNET1: subnet-0a81c8bbd3cb6a18a
      PUBLICSUBNET2: subnet-0f69c9649ed612b67
      AMAZONLINUXAMI: ami-0a887e401f7654935
      SSHSG: sg-0cd03438407b484f0
      RDPSG: sg-04b2dcf92d411181a
      HTTPSG: sg-0c968468c154d1b42
      BUCKETNAME: amehanamehan

    "ca-central-1":
      NAME: Dev
      VPC: vpc-01ed2833ff261ac6f
      DefaultVPC: vpc-c3274eab
      DefaultSubnet: subnet-6ab22d02
      PRIVATESUBNET1: subnet-0ae6f4d92310fb2f3
      PRIVATESUBNET2: subnet-0bdd4d9d1c682c766
      PUBLICSUBNET1: subnet-0ce18660c7f3ce39c
      PUBLICSUBNET2: subnet-0c11ee92821ca1e3d
      AMAZONLINUXAMI: ami-00db12b46ef5ebc36
      SSHSG: sg-
      RDPSG: sg-
      HTTPSG: sg-
      BUCKETNAME: amehan-ent

Resources:
  ADInstanceProfile:
    Properties:
      Roles:
      - Ref: ADInstanceRole
    Type: AWS::IAM::InstanceProfile
  ADInstanceRole:
    Properties:
      RoleName: !Ref ADServerRole
      AssumeRolePolicyDocument:
        Statement:
        - Action: sts:AssumeRole
          Effect: Allow
          Principal:
            Service: ec2.amazonaws.com
        Version: '2012-10-17'
      Policies:
      - PolicyDocument:
          Statement:
          - Action:
            - s3:ListBucket
            Effect: Allow
            Resource:
             - !Sub arn:aws:s3:::amehan-ent
          - Action:
            - s3:GetObject
            Effect: Allow
            Resource:
             - !Sub arn:aws:s3:::amehan-ent/*
          Version: '2012-10-17'
        PolicyName: EC2-S3-Download
      - PolicyDocument:
          Statement:
          - Action:
            - secretsmanager:GetSecretValue
            Effect: Allow
            Resource: 'arn:aws:secretsmanager:ca-central-1:*:secret:Windows/ServiceAccount/DomainJoin*'
          Version: '2012-10-17'
        PolicyName: SecretsManagerGet
    Type: AWS::IAM::Role
    
  DomainControllerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Domain Controller
      SecurityGroupIngress:
      - IpProtocol: udp
        FromPort: '123'
        ToPort: '123'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: tcp
        FromPort: '135'
        ToPort: '135'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: udp
        FromPort: '138'
        ToPort: '138'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: tcp
        FromPort: '1024'
        ToPort: '65535'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: tcp
        FromPort: '389'
        ToPort: '389'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: udp
        FromPort: '389'
        ToPort: '389'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: tcp
        FromPort: '636'
        ToPort: '636'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: tcp
        FromPort: '3268'
        ToPort: '3268'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: tcp
        FromPort: '3269'
        ToPort: '3269'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: tcp
        FromPort: '53'
        ToPort: '53'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: udp
        FromPort: '53'
        ToPort: '53'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: tcp
        FromPort: '88'
        ToPort: '88'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: udp
        FromPort: '88'
        ToPort: '88'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: tcp
        FromPort: '445'
        ToPort: '445'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: udp
        FromPort: '445'
        ToPort: '445'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: udp
        FromPort: '135'
        ToPort: '135'
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
      - IpProtocol: tcp
        FromPort: '3389'
        ToPort: '3389'
        CidrIp:
          Ref: SourceCidrForRDP
      - IpProtocol: icmp
        FromPort: "-1"
        ToPort: "-1"
        SourceSecurityGroupName:
          Ref: DomainMemberSecurityGroup
  DomainMemberSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Domain Members
      SecurityGroupIngress: []
  DomainMemberSecurityGroupIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupName:
        Ref: DomainMemberSecurityGroup
      IpProtocol: tcp
      FromPort: '3389'
      ToPort: '3389'
      CidrIp:
        Ref: SourceCidrForRDP

Outputs:
  
  ADInstanceProfile:
    Description: Instance Profile name
    Value: !Ref ADInstanceProfile
    Export: 
      Name: !Sub "${AWS::StackName}-ADInstanceProfile"

  ADInstanceRole:
    Description: Instance Role name
    Value: !Ref ADInstanceRole
    Export: 
      Name: !Sub "${AWS::StackName}-ADInstanceRole"

  DomainControllerSecurityGroup:
    Description: Instance Role name
    Value: !Ref DomainControllerSecurityGroup
    Export: 
      Name: !Sub "${AWS::StackName}-DomainControllerSecurityGroup"
      
  StackName:
    Description: StackName of this stack
    Value: !Ref AWS::StackName
